manifests/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
spec:
  podSelector:
    matchLabels:
      app: busybox1
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: busybox2
  egress:
  - {}
